[package]
name = "stm32f429-smoltcp-rtic"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic-monotonic = "1.0"
cortex-m-rtic = "1.0"
#panic-abort = "0.3"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
rtt-logger = "0.2"
log = "0.4"
modular-bitfield = "0.11"

[dependencies.stm32f4xx-hal]
version = "0.12"
features = ["rt", "stm32f429", "rtic"]

# I've updated deps and added filter modes
[dependencies.stm32-eth]
git = "https://github.com/jonlamb-gh/stm32-eth.git"
branch = "updated-deps-and-prs"
default-features = false
features = ["stm32f429", "smoltcp-phy", "smi"]

[dependencies.smoltcp]
version = "0.8"
default-features = false
features = [
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    #"log",
    #"verbose"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
